# tea-indicators

./: .gitignore  .gitlab-ci.yml  .zenodo.json  CITATION.cff  README.md  pyproject.toml  requirements.txt
docs/: CFG-PARAMS-doc.md  HOWTO_TEA.md  TEAmetrics_RCFspecs_v8-3Sep2025.md  create_region_masks.md
internal/additional_stuff/: NatVar.py  calc_SPCS_Tmean.py  calc_TEA_station_data_new.py  export_HDD.py  load_R_files.py  natural_variability.py  plot_apparent-scaling_Haslinger_scatter.py  prep_AHC_data.py  prep_ERA5Land_old.py  prep_ERA5_old.py
internal/consis_stuff/: consis_checks_CHAOSvsCLEAN.py
internal/docs/: WEGC_TEA.md
plots/: plot_TEA.py  plot_TEA_AF.py  plot_static.py
plots/paper-figs/: plot_EDF1.py  plot_EDF2.py  plot_EDF3.py  plot_EDF3_FBR.py  plot_EDF4.py  plot_EDF4_FBR.py  plot_EDF5.py  plot_EDF6.py  plot_Fig5.py  plot_fig1.py  plot_fig2.py  plot_fig3_EDF5.py  plot_fig4.py  plot_fig4a_EDF7.py  plot_fig4b.py  plot_fig4c.py  plot_fig4d.py  plot_fig6_EDF4.py  plot_fig6_EDF5.py  plot_fig7a_EDF6.py  plot_fig7a_EDF7.py  plot_fig7b.py  plot_fig7c.py  plot_fig8.py
scripts/: ERA5L_SAR_Tx99_wegnet.yaml  ERA5L_SEA_P24h_7to7_95.yaml  ERA5L_SEA_P24h_7to7_95_wegnet.yaml  ERA5L_SEA_Tx99.yaml  ERA5L_SEA_Tx99_wegnet.yaml  ERA5_AGR_EUR_Tx99_wegnet.yaml  ERA5_EUR_Tx99.yaml  ERA5_EUR_Tx99_wegnet.yaml  ERA5_FBR_P24h_7to7_95.yaml  ERA5_FBR_Tx99.yaml  ERA5_SEA_Tx99.yaml  ERA5_SEA_Tx99_wegnet.yaml  SPCS_SAR_Tx99_wegnet.yaml  SPCS_SEA_P24h_7to7_95.yaml  SPCS_SEA_P24h_7to7_95_wegnet.yaml  SPCS_SEA_Tx99_wegnet.yaml  TEA_CFG.yaml  TEA_CFG_AUT.yaml  TEA_CFG_AUT_largeGR_hst.yaml  TEA_CFG_AUT_largeGR_juf.yaml  TEA_CFG_DEFAULTS.yaml  TEA_CFG_EUR.yaml  TEA_CFG_EUR_wegnet.yaml  TEA_CFG_FBR.yaml  TEA_CFG_juf-ADJUSTED.yaml  TEA_CFG_juf.yaml  TEA_CFG_minimal.yaml  TEA_CFG_template.yaml
scripts/additional_stuff/: NatVar.py  calc_TEA_station_data_new.py  calc_supplVars4EnergyContent.py  load_R_files.py  natural_variability.py  natural_variability_OLD.py  natural_variability_OLD_crosscheck.py  plot_TEA_new_data.py  plot_TEA_new_data_GR.py  plot_TEA_new_data_station.py
scripts/calc_indices/: TEA.py  TEA_AGR.py  TEA_example.py  calc_AGR_vars.py  calc_TEA.py  calc_TEA_largeGR.py  calc_amplification_factors.py  calc_ctp_indicator_variables.py  calc_daily_basis_vars.py  calc_decadal_indicators.py  calc_station_TEA.py  combine_to_ds.py  general_TEA_stuff.py
scripts/data_prep/: create_region_masks.py  create_static_files.py  download_ERA5-Land.py  download_ERA5.py  download_ERA5Heat.py  download_ERA5_africa.py  prep_ERA5.py  prep_ERA5Land.py  prep_ERA5Land_newCDS-API.py  prep_ERA5_newCDS-API.py  prep_ERA5_newCDS_API.py  regrid_SPARTACUS_to_WEGNext.py
tests/: test_scripts.sh
(+139 files in other folders)
