[project]
name = "teametrics"
license = "CC-BY-4.0"
description = "Code to calculate Threshold Exceedance Amount (TEA) indicators as defined in https://doi.org/10.48550/arXiv.2504.18964"
authors = [
    {name = "Jürgen Fuchsberger",email = "juergen.fuchsberger@uni-graz.at"},
    {name = "Stephanie Haas",email = "stephanie.haas@uni-graz.at"},
]
readme = "docs/HOWTO_TEA.md"
homepage = ""
repository = ""
requires-python = ">=3.11, <4.0"
dependencies = [
]
dynamic = ["version"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool]
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry]
version = "0.0.0"
